--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,17 @@
 {
   "version": 2,
-  "buildCommand": "cd client && npm run build",
-  "outputDirectory": "client/build",
   "builds": [
     {
       "src": "server/index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "buildCommand": "npm run build",
+        "distDir": "build"
+      }
     }
   ],
   "routes": [
@@ -14,8 +20,12 @@
       "dest": "server/index.js"
     },
     {
+      "src": "/uploads/(.*)",
+      "dest": "server/index.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "client/build/$1"
     }
   ],
   "env": {
