--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,17 @@
 {
   "version": 2,
+  "buildCommand": "cd client && npm run build",
   "public": false,
-  "builds": [
-    {
-      "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "buildCommand": "npm run build",
-        "distDir": "build"
-      }
-    },
-    {
-      "src": "server/index.js",
-      "use": "@vercel/node"
+  "functions": {
+    "server/index.js": {
+      "maxDuration": 60
     }
-  ],
+  },
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server/index.js"
+      "dest": "server/index.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
     },
     {
       "src": "/uploads/(.*)",
@@ -26,7 +19,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "client/build/$1"
+      "dest": "server/index.js"
     }
   ]
 }
