--- a/vercel.json
+++ b/vercel.json
@@ -3,23 +3,23 @@
   "buildCommand": "cd client && npm run build",
   "public": false,
   "functions": {
-    "server/index.js": {
+    "api/index.js": {
       "maxDuration": 60
     }
   },
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server/index.js",
+      "dest": "api/index.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
     },
     {
       "src": "/uploads/(.*)",
-      "dest": "server/index.js"
+      "dest": "api/index.js"
     },
     {
       "src": "/(.*)",
-      "dest": "server/index.js"
+      "dest": "api/index.js"
     }
   ]
 }
