--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "cd client && npm run build",
+  "buildCommand": "npm install && cd client && npm install && npm run build",
   "public": false,
   "functions": {
     "api/index.js": {
