--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,23 @@
 {
   "version": 2,
-  "buildCommand": "npm install && cd client && npm install && npm run build",
-  "public": false,
-  "functions": {
-    "api/index.js": {
-      "maxDuration": 60
+  "builds": [
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "buildCommand": "npm run build",
+        "distDir": "build"
+      }
     }
-  },
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "api/index.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
+      "dest": "api/index.js"
     },
     {
       "src": "/uploads/(.*)",
@@ -19,7 +25,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "api/index.js"
+      "dest": "client/build/$1"
     }
   ]
 }
