--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,16 @@
 {
   "version": 2,
+  "buildCommand": "cd client && npm run build",
   "builds": [
     {
       "src": "api/index.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "buildCommand": "npm run build",
-        "distDir": "build"
-      }
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "api/index.js"
-    },
-    {
-      "src": "/uploads/(.*)",
-      "dest": "api/index.js"
-    },
-    {
       "src": "/(.*)",
-      "dest": "client/build/$1"
+      "dest": "api/index.js"
     }
   ]
 }
