--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,13 @@
 {
   "version": 2,
-  "buildCommand": "npm install && cd client && npm install && npm run build",
+  "buildCommand": "npm install && cd client && npm install && npm run build && cd ..",
   "builds": [
     {
       "src": "api/index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": "client/build/**"
+      }
     }
   ],
   "routes": [
