--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,15 @@
 {
   "version": 2,
-  "buildCommand": "npm install && cd client && npm install && npm run build && cd .. && node scripts/copy-build.js",
+  "buildCommand": "npm install && cd client && npm install && npm run build",
   "builds": [
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "buildCommand": "npm run build",
+        "distDir": "build"
+      }
+    },
     {
       "src": "api/index.js",
       "use": "@vercel/node"
@@ -9,8 +17,12 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/(.*)",
       "dest": "api/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "client/build/$1"
     }
   ]
 }
