--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "version": 2,
-  "buildCommand": "npm install && cd client && npm install && npm run build",
   "builds": [
     {
       "src": "client/package.json",
@@ -21,8 +20,16 @@
       "dest": "api/index.js"
     },
     {
-      "src": "/(.*)",
+      "src": "/uploads/(.*)",
+      "dest": "api/index.js"
+    },
+    {
+      "src": "/(.*\\.(?:js|css|html|png|jpg|jpeg|gif|svg|ico|json))$",
       "dest": "client/build/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "client/build/index.html"
     }
   ]
 }
