--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
   "version": 2,
-  "buildCommand": "npm install && cd client && npm install && npm run build && cd .. && node scripts/copy-build.js",
+  "buildCommand": "cd client && npm install && npm run build",
   "builds": [
     {
       "src": "api/index.js",
       "use": "@vercel/node",
       "config": {
-        "maxLambdaSize": "50mb"
+        "maxLambdaSize": "50mb",
+        "includeFiles": "client/build/**"
       }
     }
   ],
