Fix vercel.json schema: remove invalid nodeVersion property

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,13 @@
 {
   "version": 2,
   "buildCommand": "npm install && cd client && npm install && npm run build",
-  "framework": "express",
-  "nodeVersion": "18.x",
   "builds": [
     {
       "src": "api.js",
       "use": "@vercel/node",
       "config": {
         "maxLambdaSize": "50mb",
-        "includeFiles": "client/build/**",
-        "excludeFiles": "node_modules/**"
+        "includeFiles": "client/build/**"
       }
     }
   ],
