--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client": "cd client && npm start",
     "install-all": "npm install && cd client && npm install",
     "build": "cd client && npm run build && node scripts/copy-build.js",
-    "vercel-build": "npm install && cd client && npm install && npm run build && node ../scripts/copy-build.js"
+    "vercel-build": "npm install && cd client && npm install && npm run build && node ../scripts/copy-build.js",
+    "render-build": "npm install && cd client && npm install && npm run build && cd .. && node scripts/copy-build.js"
   },
   "keywords": ["pdf", "processing", "combine", "trim", "reorder"],
   "author": "",
