--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
     "vercel-build": "npm install && cd client && npm install && npm run build && node ../scripts/copy-build.js",
     "render-build": "npm install && cd client && npm install && npm run build && cd .. && node scripts/copy-build.js"
   },
-  "keywords": ["pdf", "processing", "combine", "trim", "reorder"],
+  "keywords": [
+    "pdf",
+    "processing",
+    "combine",
+    "trim",
+    "reorder"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "pdf-lib": "^1.17.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "node-qpdf": "^1.0.3",
+    "pdf-lib": "^1.17.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
