fix: Use Docker for Render deployment with qpdf
- Create Dockerfile with qpdf system package installation
- Update render.yaml to use Docker environment instead of Node
- This ensures qpdf is properly installed on Render.com
- Docker approach is more reliable for system dependencies

--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 ﻿services:
   - type: web
     name: pdf-processor
-    env: node
-    buildCommand: apt-get update && apt-get install -y qpdf && npm install && cd client && npm install && npm run build && cd ..
-    startCommand: node server/index.js
+    env: docker
+    dockerfilePath: ./Dockerfile
+    dockerContext: .
     envVars:
-      - key: NODE_VERSION
-        value: 18.x
+      - key: NODE_ENV
+        value: production
