--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "node-qpdf": "^1.0.3",
-    "pdf-lib": "^1.17.1"
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.4.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
